url list, fixes, validation

--- a/UrlShortener.Web/Views/Shared/_Layout.cshtml
+++ b/UrlShortener.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - @ViewBag.Title</p>
+                    <p>&copy; @DateTime.Now.Year - Shorten Me</p>
                 </div>
             </div>
         </footer>
