--- a/UrlShortener.Web/Views/Shared/_Layout.cshtml
+++ b/UrlShortener.Web/Views/Shared/_Layout.cshtml
@@ -1,37 +1,46 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8"/>
         <title>@ViewBag.Title</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body>
         <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("Shorten Me", "Index", "Url")</p>
-                </div>
-                <div class="float-right">
-                    <nav>
-                        <ul id="menu">
+            <div class="container">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".my-navbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <div class="navbar-brand">
+                            @Html.ActionLink("Shorten Me", "Index", "Url")
+                        </div>
+                    </div>
+                    <div class="collapse navbar-collapse my-navbar" id="myNavbar" role="navigation">
+                        <ul class="nav navbar-nav navbar-right">
                             <li>@Html.ActionLink("Home", "Index", "Url")</li>
                             <li>@Html.ActionLink("Url List", "List", "Url")</li>
                         </ul>
-                    </nav>
+                    </div>
                 </div>
+            </nav>
             </div>
         </header>
         <div id="body">
             @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
+            <section class="">
                 @RenderBody()
             </section>
         </div>
         <footer>
-            <div class="content-wrapper">
+            <div class="">
                 <div class="float-left">
                     <p>&copy; @DateTime.Now.Year - Shorten Me</p>
                 </div>
@@ -39,6 +48,7 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
     </body>
 </html>
