--- a/UrlShortener.Web/Views/Url/Index.cshtml
+++ b/UrlShortener.Web/Views/Url/Index.cshtml
@@ -15,7 +15,7 @@
         </div>
         if (!string.IsNullOrEmpty(Model.ShortUrl)) {
             <div>
-                <a href="@Model.ShortUrl" target="_blank">@Model.ShortUrl</a>
+                <h3><a href="@Model.ShortUrl" target="_blank">@Model.ShortUrl</a></h3>
             </div>
             } 
     }
