--- a/UrlShortener.Web/Views/Url/UrlList.cshtml
+++ b/UrlShortener.Web/Views/Url/UrlList.cshtml
@@ -1,49 +1,56 @@
 ﻿@model IEnumerable<UrlShortener.Web.Models.Url>
 @{
-    ViewBag.Title = "Shortened URLs List";
+    ViewBag.Title = "URL List";
 }
+<div class="jumbotron text-center">
+    <h2>Shortened URL List</h2>
 
-<h2>List of Shortened URLs</h2>
-
-    <table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.LongUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShortUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedIp)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumOfClicks)
-        </th>
-        @*<th></th>*@
-    </tr>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LongUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShortUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedIp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumOfClicks)
-            </td>
-            @*<td>
-                @Html.ActionLink("Details", "Details", new { id = item.ShortUrl })
-            </td>*@
-        </tr>
+    @if (!@Model.Any())
+    {
+        <label>No URLs shortened</label>
     }
-    </table>
+    else
+    {
+        <div class="table-responsive">
+            <table class=" table table-condensed table-bordered table-hover">
+                <tr>
+                    <th class="th">
+                        @Html.DisplayNameFor(model => model.LongUrl)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShortUrl)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CreatedDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CreatedIp)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NumOfClicks)
+                    </th>
+                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LongUrl)
+                        </td>
+                        <td>
+                            <a href="@item.ShortUrl" target="_blank">@item.ShortUrl</a>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreatedDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreatedIp)
+                        </td>
+                        <td class="num">
+                            @Html.DisplayFor(modelItem => item.NumOfClicks)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    }
+    </div>
