--- a/UrlShortener.Web/Content/bootstrap-custom.css
+++ b/UrlShortener.Web/Content/bootstrap-custom.css
@@ -46,3 +46,8 @@
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
   background-color: #aaaaaa;
 }
+
+.validation-list ul {
+    list-style-type: none;
+    color: red;
+}
