clean up and fixes for url scheme generation

--- a/UrlShortener.Web/Views/Url/UrlList.cshtml
+++ b/UrlShortener.Web/Views/Url/UrlList.cshtml
@@ -1,10 +1,4 @@
-﻿@*@model IEnumerable<UrlShortener.Web.Models.Url>
-@{
-    ViewBag.Title = "URL List";
-}*@
-
-
-@section scripts{
+﻿@section scripts{
     <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/Client/ShortUrlClient.js"></script>
 }
